# cancer_methods_lecture

./: README.md  pyproject.toml
01/: README.md
02/: README.md  pipeline.sh  read_depth.ipynb
03/: main.Rmd  main.md  significant_results.csv  solution.R  template.R
