[tool.poetry]
name = "cancer-methods-lecture"
version = "0.1.0"
description = ""
authors = ["David Beinhauer <david.beinhauer@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
